--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
 comm==0.1.4
-contourpy==1.1.0
+contourpy
 cycler==0.11.0
 dash==2.12.1
 dash-core-components==2.0.0
